Fix flex wrap property

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -5,3 +5,6 @@ h1 {
 h3 {
   @apply text-4xl;
 }
+h4 {
+  @apply text-2xl;
+}
